[gd_scene load_steps=15 format=3 uid="uid://c0hdgikiv5k2b"]

[ext_resource type="Script" path="res://main.gd" id="1_4h1go"]
[ext_resource type="PackedScene" uid="uid://d2cijtnxs63pi" path="res://player.tscn" id="1_vg102"]
[ext_resource type="PackedScene" uid="uid://blc5cm7rlniqt" path="res://enemy.tscn" id="3_1tvyj"]
[ext_resource type="Material" uid="uid://bfis8w1qqfi0y" path="res://art/newGroundMaterial.material" id="3_ayaff"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="3_qdl4e"]
[ext_resource type="Script" path="res://time_label.gd" id="6_w0cha"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7c0v4"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_rw3el"]
size = Vector3(60, 2, 60)

[sub_resource type="GDScript" id="GDScript_qsvp7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1l2oe"]
albedo_color = Color(1, 0.556863, 0.247059, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_mtnqe"]
material = SubResource("StandardMaterial3D_1l2oe")

[sub_resource type="Curve3D" id="Curve3D_t7mqd"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -16.4535, 0, -12.4792, 0, 0, 0, 0, 0, 0, 15.5747, 0, -13.2604, 0, 0, 0, 0, 0, 0, 16.8766, 0, 13.56, 0, 0, 0, 0, 0, 0, -16.1931, 0, 13.56, 0, 0, 0, 0, 0, 0, -16.4535, 0, -12.4792),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Gradient" id="Gradient_06ymh"]
offsets = PackedFloat32Array(0, 0.00651466)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fmhxb"]
gradient = SubResource("Gradient_06ymh")

[node name="Main" type="Node"]
script = ExtResource("1_4h1go")
EnemyTemplate = ExtResource("3_1tvyj")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.91995, 0)
collision_layer = 4
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_7c0v4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_rw3el")
surface_material_override/0 = ExtResource("3_ayaff")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0721763, 0.997392, 0, -0.997392, 0.0721763, 0, 30, 1)
shadow_enabled = true
shadow_normal_bias = 1.0

[node name="CameraPivot" type="Marker3D" parent="DirectionalLight3D"]
transform = Transform3D(1, 0, 0, 0, 0.756299, -0.654226, 0, 0.654226, 0.756299, 0, -1.1679, -29.9939)

[node name="Camera3D" type="Camera3D" parent="DirectionalLight3D/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.862248, 0.506486, 0, -0.506486, 0.862248, 0, 10.5541, 12.7001)

[node name="Player" parent="." instance=ExtResource("1_vg102")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Score: 0
"
script = ExtResource("3_qdl4e")

[node name="TimeLabel" type="Label" parent="UserInterface"]
layout_mode = 1
anchors_preset = -1
anchor_right = 3.602
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 28.0
offset_right = -64.08
offset_bottom = 11.0
text = "Time: 20"
script = ExtResource("6_w0cha")

[node name="Cylinders" type="Node3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
script = SubResource("GDScript_qsvp7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.37529, 0, -4.13147)
mesh = SubResource("CylinderMesh_mtnqe")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.29057, 0, 4.59302)
mesh = SubResource("CylinderMesh_mtnqe")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(0.999634, 0, -0.0270668, 0, 1, 0, 0.0270668, 0, 0.999634, 5.3237, 0, -4.44774)
mesh = SubResource("CylinderMesh_mtnqe")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.73457, 0, 4.51893)
mesh = SubResource("CylinderMesh_mtnqe")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_t7mqd")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.0243837, 0, -0.999702, 0, 1, 0, 0.999702, 0, 0.0243837, -16.4535, 0, -12.4792)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 190.0
offset_top = 134.0
offset_right = 486.0
offset_bottom = 338.0
texture = SubResource("GradientTexture2D_fmhxb")

[node name="GameOverLabel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 77.0
offset_top = 33.0
offset_right = 219.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 3

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="UserInterface/TimeLabel" method="_on_gametimer_timeout"]
